--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://github.com/minilseon/test/"
+  "homepage": "https://minilseon.github.io/test/"
 }
